fix the switch button text not showing after set content background white

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -145,6 +145,7 @@ body {
   -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
   box-sizing: border-box;
+  z-index: 1;
 }
 
 .topcoat-switch__input {
